@@ -1,4 +1,16 @@
 ------------------------------------------------------------------------
+r2205 | rdahnke | 2023-05-08 09:34:57
+
+Changed paths:
+ M CHANGES.txt
+ M cat_io_csv.m
+ M cat_io_report.m
+ M cat_main_reportfig.m
+
+Fixed:   Corrected bug in cat_io_csv to read real NaNs.
+Fixed:   Corrected bug in cat_io_report.   
+Changed: Setup blood vessel output in cat_main_reportfig.
+------------------------------------------------------------------------
 r2201 | rdahnke | 2023-05-06 11:00:21
 
 Changed paths:
